--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Journey as a Developer</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Why I want to become a developer?</h1>
+    
+    <p>
+        My passion for software development stems from a deep curiosity about how technology shapes our world. From a young age, I was fascinated by how software could solve complex problems, streamline processes, and create innovative solutions. 
+        The ability to build applications that impact people's lives drives me to continuously learn and improve my skills. I enjoy problem-solving, logical thinking, and bringing ideas to life through coding. 
+        Becoming a developer allows me to be a part of an ever-evolving industry that challenges me to grow and innovate every day.
+    </p>
 </body>
-
 </html>
